Fix side-menu overlay z-index and remove heroicon margin

--- a/src/style.css
+++ b/src/style.css
@@ -747,7 +747,6 @@ header h1 {
     min-width: 30px;
     color: var(--primary-color);
     display: flex;
-    margin: 0 auto;
 }
 
 .menu-item:hover, .menu-item.active {
@@ -892,7 +891,7 @@ header h1 {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 9990;
+    z-index: 9998;
     display: none;
 }
 
